--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.4.16",
+    "framer-motion": "^12.10.5",
     "next": "15.3.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
